k8s/10-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  namespace: demo
spec:
  ports:
  - name: demo-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    microsvc: demo
  type: ClusterIP
