k8s/20-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.jmstk.eu
      http:
        paths:
          - backend:
              serviceName: demo-svc
              servicePort: 8080
            path: /
